# cpp_stopwatch

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/: dependabot.yml
.github/workflows/: build_and_release.yml
